nats-micro/tests/ui/v2_unsupported_payload.stderr
error: unsupported payload argument shape
 --> tests/ui/v2_unsupported_payload.rs:6:31
  |
6 |     async fn create(callback: fn()) {
  |                               ^^^^
